--- a/config.json
+++ b/config.json
@@ -1,46 +1,1 @@
-{
-  "seed": 0,
-  "n_channels": 3,
-  "img_size": 64,
-  "batch_size": 128,
-  "lattent_space_size": 1024,
-
-  "generator_params": {
-    "feature_hidden_size": 384,
-    "n_transformer_layers": 4,
-    "output_hidden_dim": 768,
-    "mapping_mlp_params": {
-      "layers": [],
-      "activation": "gelu",
-      "dropout_rate": 0.0
-    },
-    "transformer_params": {
-      "n_head": 4,
-      "attention_dropout_rate": 0.2,
-      "mlp_layers": [],
-      "mlp_activation": "relu",
-      "mlp_dropout": 0.2
-    }
-  },
-
-  "discriminator_params": {
-    "n_transformer_layers": 4,
-    "encoder_params": {
-      "patch_size": 8,
-      "overlap": 2,
-      "dropout_rate": 0.0
-    },
-    "transformer_params": {
-      "n_head": 4,
-      "attention_dropout_rate": 0.2,
-      "mlp_layers": [],
-      "mlp_activation": "relu",
-      "mlp_dropout": 0.2
-    },
-    "mapping_mlp_params": {
-      "layers": [],
-      "activation": "gelu",
-      "dropout_rate": 0.0
-    }
-  }
-}
+{"seed": 0, "n_channels": 3, "img_size": 16, "batch_size": 256, "lattent_space_size": 1024, "generator_params": {"feature_hidden_size": 384, "n_transformer_layers": 4, "output_hidden_dim": 768, "mapping_mlp_params": {"layers": [], "activation": "gelu", "dropout_rate": 0.0}, "transformer_params": {"n_head": 4, "attention_dropout_rate": 0.2, "mlp_layers": [], "mlp_activation": "relu", "mlp_dropout": 0.2}}, "discriminator_params": {"n_transformer_layers": 4, "encoder_params": {"patch_size": 8, "overlap": 2, "dropout_rate": 0.0}, "transformer_params": {"n_head": 4, "attention_dropout_rate": 0.2, "mlp_layers": [], "mlp_activation": "relu", "mlp_dropout": 0.2}, "mapping_mlp_params": {"layers": [], "activation": "gelu", "dropout_rate": 0.0}}}
